<resources>
    <string name="app_name">Вконтакте</string>
    <string name="true_button">Верно</string>
    <string name="false_button">Неверно</string>
    <string name="correct_toast">Правильно!</string>
    <string name="icorect_toast">Неправильно!</string>
    <string name="next_button">Далее</string>
    <string name="prev_button">Назад</string>
    <string name="question_australia">Canberra is the capital of Australia</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean</string>
    <string name="question_africa">The source of the Nile River is in Egypt</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake</string>

    <string name="previous_button_description">Предыдущий вопрос</string>
    <string name="next_button_description">Следющий вопрос</string>
</resources>