<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/blue">

    <ImageButton

        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/vk" />
    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/question_australia"
        android:padding="24dp" />

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
android:background="@drawable/button"
        android:id="@+id/true_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/true_button"
        android:layout_marginRight="5dp"/>


        <Button

            android:layout_marginLeft="5dp"
            android:background="@drawable/button"
        android:id="@+id/false_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/false_button"/>

    </LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="5dp">

    <ImageButton
        android:id="@+id/prev_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:src="@drawable/blackarr22"
        android:contentDescription="@string/previous_button_description" />

    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:src="@drawable/blackarr2"
        android:contentDescription="@string/next_button_description"
        android:layout_marginLeft="10dp" />


</LinearLayout>
</LinearLayout>